# intruder-detector-cpp

./: .gitignore  CMakeLists.txt  README.md  setup.sh  video_downloader.py
UI/: readme.md
application/: CMakeLists.txt  README.md
application/include/: videocap.hpp
application/resources/: conf.txt
application/src/: main.cpp
resources/: config.json
